Migrations fix (merge all changes in one file). Report model fix (change field name "slag" to "slug" and all files depend of it).

--- a/templates/layout/basic.html
+++ b/templates/layout/basic.html
@@ -27,7 +27,7 @@
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                         {% if indicator_info %}
                                             {% for indicator in indicator_info %}
-                                                <a class="dropdown-item" href="{% url 'indicator:indicator' indicator.slag indicator.pk %}">{{ indicator.name }}</a>
+                                                <a class="dropdown-item" href="{% url 'indicator:indicator' indicator.slug indicator.pk %}">{{ indicator.name }}</a>
                                             {% endfor %}
                                         {% endif %}
                                     </div>
